@@ -1,4 +1,4 @@
-ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET,CONST_YEAR
-COM_394,CR,CENTRAL REGION,DT,DOWNTOWN CORE,DTSZ01,BUGIS,103.85532,1.29616,Com,CR+PC/LWAL+DUL/H:4-6/COM,5000,04-Jun,8000,1166,9328000,2052160,7275840,4664000,13992000,0,
-COM_4497,CR,CENTRAL REGION,RC,ROCHOR,RCSZ02,LITTLE INDIA,103.85307,1.30563,Com,CR+PC/LWAL+DUL/H:4-6/COM,5000,04-Jun,8000,1166,9328000,2052160,7275840,4664000,13992000,0,
-COM_7179,NR,NORTH REGION,WD,WOODLANDS,WDSZ04,WOODLANDS SOUTH,103.79151,1.43416,Com,CR/LFM+DUL/H:7/COM,10000,7,13349,800,10679200,6407520,4271680,5339600,16018800,0,1999
+ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET,CONST_YEAR,AVG_OCCUPANTS
+COM_394,CR,CENTRAL REGION,DT,DOWNTOWN CORE,DTSZ01,BUGIS,103.85532,1.29616,Com,CR+PC/LWAL+DUL/H:4-6/COM,5000,04-Jun,8000,1166,9328000,2052160,7275840,4664000,13992000,0,2001,20
+COM_4497,CR,CENTRAL REGION,RC,ROCHOR,RCSZ02,LITTLE INDIA,103.85307,1.30563,Com,CR+PC/LWAL+DUL/H:4-6/COM,5000,04-Jun,8000,1166,9328000,2052160,7275840,4664000,13992000,0,1998,40
+COM_7179,NR,NORTH REGION,WD,WOODLANDS,WDSZ04,WOODLANDS SOUTH,103.79151,1.43416,Com,CR/LFM+DUL/H:7/COM,10000,7,13349,800,10679200,6407520,4271680,5339600,16018800,0,1999,40
