@@ -1,4 +1,4 @@
-ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET
-Ind_394,CR,CENTRAL REGION,GL,GEYLANG,GLSZ01,KALLANG WAY,103.87837,1.32443,Ind,UNK/IND,2500,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0
-Ind_4497,NR,NORTH REGION,SK,SUNGEI KADUT,SKSZ05,RESERVOIR VIEW,103.7502,1.43086,Ind,UNK/IND,5000,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0
-Ind_7179,WR,WEST REGION,PN,PIONEER,PNSZ04,GUL BASIN,103.67234,1.30805,Ind,UNK/IND,7500,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0
+ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET,AVG_OCCUPANTS
+Ind_394,CR,CENTRAL REGION,GL,GEYLANG,GLSZ01,KALLANG WAY,103.87837,1.32443,Ind,UNK/IND,2500,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0,5
+Ind_4497,NR,NORTH REGION,SK,SUNGEI KADUT,SKSZ05,RESERVOIR VIEW,103.7502,1.43086,Ind,UNK/IND,5000,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0,5
+Ind_7179,WR,WEST REGION,PN,PIONEER,PNSZ04,GUL BASIN,103.67234,1.30805,Ind,UNK/IND,7500,UNK,7640,1271.7,9715788,2914736,6801052,9715788,19431576,0,5
