@@ -1,13 +1,13 @@
-ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,DWELLINGS,DWELLINGS_PER_BUILDING,AREA_PER_DWELLING_SQM,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET
-RES_394,CR,CENTRAL REGION,BM,BUKIT MERAH,BMSZ10,TIONG BAHRU,103.83124,1.28288,Res,CR+CIP/LFINF+DUL/H:5/RES,2500,5,41,41,66,12544,2000,25088000,5017600,20070400,6272000,31360000,120
-RES_4497,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ01,ANAK BUKIT,103.77368,1.34474,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_7179,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ02,SWISS CLUB,103.78166,1.34095,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_9809,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ04,ULU PANDAN,103.7821,1.31674,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6
-RES_13693,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ07,LEEDON PARK,103.80143,1.32125,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_18309,CR,CENTRAL REGION,GL,GEYLANG,GLSZ05,GEYLANG EAST,103.90132,1.31493,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6
-RES_18569,CR,CENTRAL REGION,GL,GEYLANG,GLSZ05,GEYLANG EAST,103.90358,1.3117,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6
-RES_34902,CR,CENTRAL REGION,TP,TOA PAYOH,TPSZ12,JOO SENG,103.88329,1.33929,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6
-RES_40031,ER,EAST REGION,BD,BEDOK,BDSZ05,FRANKEL,103.92819,1.3172,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_65615,NER,NORTH-EAST REGION,HG,HOUGANG,HGSZ08,TAI SENG,103.88412,1.34691,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_87214,WR,WEST REGION,BP,BUKIT PANJANG,BPSZ06,DAIRY FARM,103.77356,1.37244,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5
-RES_89558,WR,WEST REGION,CL,CLEMENTI,CLSZ03,FABER,103.75618,1.32298,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6
+ASSET_REF,ID_1,NAME_1,ID_2,NAME_2,ID_3,NAME_3,LONGITUDE,LATITUDE,OCCUPANCY,TAXONOMY,BUILDINGS,NUM_FLOORS,DWELLINGS,DWELLINGS_PER_BUILDING,AREA_PER_DWELLING_SQM,TOTAL_FLOOR_AREA_SQM,COST_PER_AREA_USD,COST_BUILDING_USD,COST_STRUCTURAL_USD,COST_NONSTRUCTURAL_USD,COST_CONTENTS_USD,TOTAL_REPL_COST_USD,OCCUPANTS_PER_ASSET,AVG_OCCUPANTS
+RES_394,CR,CENTRAL REGION,BM,BUKIT MERAH,BMSZ10,TIONG BAHRU,103.83124,1.28288,Res,CR+CIP/LFINF+DUL/H:5/RES,2500,5,41,41,66,12544,2000,25088000,5017600,20070400,6272000,31360000,120, 100
+RES_4497,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ01,ANAK BUKIT,103.77368,1.34474,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5, 3
+RES_7179,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ02,SWISS CLUB,103.78166,1.34095,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5, 3
+RES_9809,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ04,ULU PANDAN,103.7821,1.31674,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6, 4
+RES_13693,CR,CENTRAL REGION,BT,BUKIT TIMAH,BTSZ07,LEEDON PARK,103.80143,1.32125,Res,UNK/H:1-3/RES,2500,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5,3
+RES_18309,CR,CENTRAL REGION,GL,GEYLANG,GLSZ05,GEYLANG EAST,103.90132,1.31493,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6,4
+RES_18569,CR,CENTRAL REGION,GL,GEYLANG,GLSZ05,GEYLANG EAST,103.90358,1.3117,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6,4
+RES_34902,CR,CENTRAL REGION,TP,TOA PAYOH,TPSZ12,JOO SENG,103.88329,1.33929,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6,4
+RES_40031,ER,EAST REGION,BD,BEDOK,BDSZ05,FRANKEL,103.92819,1.3172,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5,3
+RES_65615,NER,NORTH-EAST REGION,HG,HOUGANG,HGSZ08,TAI SENG,103.88412,1.34691,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5,2
+RES_87214,WR,WEST REGION,BP,BUKIT PANJANG,BPSZ06,DAIRY FARM,103.77356,1.37244,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,5,2
+RES_89558,WR,WEST REGION,CL,CLEMENTI,CLSZ03,FABER,103.75618,1.32298,Res,UNK/H:1-3/RES,5000,01-Mar,1,1,300,300,2333,699900,132981,566919,174975,874875,6,3
