@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Recognized `occupants_avg` field in the exposure
   * Optimized reading the exposure (both speed and memory)
   * Optimized the rupture sampling for MultiFaultSources and improved
     the parallelization for MultiFaultSources and MultiPointSources
